--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,71 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
 body {
   font-family: 'Courier New', monospace;
   background: black;
   color: limegreen;
   padding: 100px;
+  overflow: hidden;
+
 }
+
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1; 
+  }
 
 input, button {
   font-size: 1.2em;
   padding: 10px;
   margin-top: 10px;
+}
+
+
+.tituloGPT{
+  font-size: 10em;
+  color: lime;
+  text-align: center;
+}
+
+input[type=text] {
+  width: 1000px;
+  height: 35px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid limegreen;
+  background-color:black;
+  color: lime;
+  border-radius: 4px;
+}
+
+::placeholder {
+  color: lime;
+  opacity: 0.7;
+}
+
+input[type=text]:focus {
+  border: 4px solid lime;
+}
+
+.tituloGPT, .respuesta, .escribir {
+    position: relative;
+    z-index: 1;
+    
+  }
+
+.escribir {
+  display: flex;
+  justify-content:space-evenly;
+  align-items: center;
 }
 
 .respuesta {
