--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,8 @@ input[type=text] {
   background-color:black;
   color: lime;
   border-radius: 4px;
+
+  transition: transform 0.3s ease;
 }
 
 ::placeholder {
@@ -53,8 +55,14 @@ input[type=text] {
 }
 
 input[type=text]:focus {
-  border: 4px solid lime;
+  border: 3px solid lime;
+  outline: none;
 }
+
+input[type=text]:hover {
+  transform: scale(1.05);
+}
+
 
 .tituloGPT, .respuesta, .escribir {
     position: relative;
@@ -69,9 +77,17 @@ input[type=text]:focus {
 }
 
 .respuesta {
-  margin-top: 20px;
+  margin-top: 100px;
   padding: 15px;
-  border: 1px solid lime;
-  background: #111;
+  border: 3px solid lime;
+  background: black;
+  color: lime;
+  font-size: 1.2em;
   white-space: pre-wrap;
+
+  transition: transform 0.3s ease;
+}
+
+.respuesta:hover {
+  transform: scale(1.05);
 }
