posibles errores resultos

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,6 @@
 </div>
   {% endif %}
 
-<script src="/funciones.js"></script>
+  <script src="{{ url_for('static', filename='funciones.js') }}"></script>
 </body>
 </html>
