--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,24 @@ canvas {
   z-index: -1;
 }
 
+.alerta {
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  padding: 1em;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  animation: parpadeo 1s infinite;
+}
+
+@keyframes parpadeo {
+  0% { opacity: 1; }
+  50% { opacity: 0.4; }
+  100% { opacity: 1; }
+}
+
 input, button {
   font-size: 1.2em;
   padding: 10px;
@@ -83,3 +101,16 @@ input[type=text]:hover {
 .respuesta:hover {
   transform: scale(1.05);
 }
+
+ #reset-button {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      background-color: #ff5555;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      cursor: pointer;
+      border-radius: 4px;
+      font-weight: bold;
+    }
