--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 <h1 class="tituloGPT">XATTI.DUMB</h1>
 
 {% if nivel >= 35 %}
-  <div id="alerta" class="alerta">¡Atención!</div>
+  <div id="alerta" class="alerta">¡Sobrecarga!</div>
 {% endif %}
 
 <form class="escribir" method="POST">
